<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateContactActivity">

    <ImageButton
        android:id="@+id/btnBackCreateContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tvCreateContactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_contact"
        android:textSize="25sp"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPersonNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_name"
        android:textSize="20sp"
        android:textColor="?attr/colorSecondary"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateContactText" />

    <EditText
        android:id="@+id/etTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPersonNameText"
        app:layout_constraintStart_toStartOf="@+id/tvPersonNameText"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonNameText"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvPhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        android:textColor="?attr/colorSecondary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTextPersonName" />

    <EditText
        android:id="@+id/etTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/_91"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneText"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneText"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/etTextPhone"
        app:layout_constraintStart_toStartOf="@+id/etTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/etTextPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>