<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/btnBackSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="?attr/colorSecondary" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="?attr/colorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutName"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextEmailAddressSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextConfirmPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUpSignUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />

    <TextView
        android:id="@+id/tvSignInMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSignInSignUp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSignInMessageText" />

</androidx.constraintlayout.widget.ConstraintLayout>